# c-big-brother-is-watching-you

./: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  FaceRecognizer.pro  QT_FaceRecognizer.cpp  QT_FaceRecognizer.h  QT_FaceRecognizer.qrc  QT_FaceRecognizer.ui  QT_FaceRecognizer_Front.ui  cmake_install.cmake  main.cpp
